code/examples/stderr/borrowck_1.stderr
error[E0308]: mismatched types
  --> examples/borrowck_1.rs:12:18
   |
12 |     accepts_func(func, &274);
   |     ------------ ^^^^ one type is more general than the other
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected fn pointer `for<'a> fn(&'a _)`
                 found fn item `fn(&'static _) {func}`
note: function defined here
  --> examples/borrowck_1.rs:5:4
   |
 5 | fn accepts_func(f: fn(&u32), data: &u32) {
   |    ^^^^^^^^^^^^ -----------

For more information about this error, try `rustc --explain E0308`.
error: could not compile `code` (example "borrowck_1") due to 1 previous error
